2013-08-12 Max Baak <mbaak@cern.ch>
        M       setup.sh
        * Revert to Python version 2.6.5, this works okay (again) on lxplus.

2013-08-09 Alex Koutsman <alex.koutsman@cern.ch>
	M       src/CombineWorkSpaces.cxx
	M       src/Utils.cxx
	* Fixed some bugs in CombineWorkspaces.cxx, so that combination data and pdf can now be fit to each other
	*	Some minor naming issues remain, to be followed up.
	* Added some catches in Util::resetError() function for combination workspaces

2013-08-06 Alex Koutsman <alex.koutsman@cern.ch>
	M       src/CombineWorkSpaces.cxx
	* Solved re-introduced bug for collecting hypotests
	*	 for combination of workspaces, one must add "+combined" (where combined is the workspace name in file) to the format string
	*	 Example : format2 = 'filename+/afs/cern.ch/atlas/project/cern/susy/users/jlorenz/Sig_SM_SS1step_%f_%f_%f+combined'
	* Added more debug print statements

2013-08-05 Alex Koutsman <alex.koutsman@cern.ch>
	M       src/CombineWorkSpaces.cxx
	* Solved bug, where combination pdf category was out of sync with combination data
	* Added more print statements and fixed naming-problems

2013-07-26 Max Baak <mbaak@cern.ch>
        M       setup.sh
        * Private version of root 5.34.09, which uses minuit2 in the asymptotic calculator, and has looser requirements for successful fits. (= needs only a valid minimum)
	* Python version 2.7.3
	
2013-07-25 Max Baak <mbaak@cern.ch>
	M       python/configManager.py
	M       python/sample.py
	M       python/systematic.py
	* Possibility to different nominal tree for systematics evaluation.
	* Use ala:
	jes       = Systematic("JES",    "_NoSys", "_JESup"    ,"_JESdown"    ,"tree","overallNormHistoSys") # JES uncertainty - for low pt jets
        jes.differentNominalTreeWeight = True 
	* Tagging HistFitter-00-00-30 


2012-12-05 Alex Koutsman <alex.koutsman@cern.ch>
	M 	Utils.cxx
	* Fixed the NLL plotting for Inf/NaN-error and wrong range setting.
	
2013-06-18 Max Baak <mbaak@cern.ch>